# video2bili

./: .gitignore  BACKLOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE2.md  README.md  pyproject.toml
assets/cta/: README.md
assets/cta/src/: .gitignore  build.sh  build_timeline.py  build_tts.sh  gen_char.py  make_assets.sh  slogan.ass  slogan_tts.ass  timeline.env
assets/topic/: done_topics.txt  streamers.txt
docs/: 2026-04-11-video2yt-design.md  2026-04-11-video2yt-plan.md  2026-04-12-cut-ranges-design.md  plan.md
docs/superpowers/plans/: 2026-05-14-video2yt-subtitle.md  2026-05-20-video2yt-music-swap.md  2026-05-23-music-swap-conditional-bgm.md  2026-05-23-music-swap-vocal-gate.md  2026-05-23-subtitle-pause-split.md  2026-05-23-subtitle-silencedetect-pause-split.md  2026-05-24-step6-restructure.md  2026-05-27-speech2srt-integration.md  2026-05-29-prefetch-cli.md
docs/superpowers/specs/: 2026-04-18-video-production-workflow.md  2026-05-14-video2yt-subtitle-design.md  2026-05-20-music-swap-design.md  2026-05-24-step6-restructure.md  2026-05-29-prefetch-cli-design.md
scripts/: append_cta.sh  harvest_hearthstone_json.py  image_quick.py  post_comment.py  research_card.py  thumbnail_compose.py  thumbnail_polish.py  tts_quick.py  youtube_upload.py
src/video2yt/: __main__.py  burn.py  burn_cli.py  cli.py  compose.py  compose_cli.py  cuts.py  download.py  fetch.py  fetch_cli.py  image_gen.py  image_gen_cli.py  merge.py  merge_cli.py  meta.py  music_detect.py  music_library.py  music_mix.py  music_mix_cli.py  music_swap.py  music_swap_cli.py  prefetch_cli.py  research_card.py  research_card_cli.py  stems.py  stems_cli.py  subtitle.py  subtitle_cli.py  thumbnail.py  thumbnail_cli.py  topic.py  topic_cli.py  transcribe.py  transcribe_cli.py  tts.py  tts_cli.py  upload.py  upload_cli.py  validate.py
src/video2yt/data/: __init__.py  bg_glossary.yaml  music_library.json
tests/: test_burn_all.py  test_burn_real_ffmpeg.py  test_compose_outline_shadow.py  test_music_mix.py  test_prefetch.py  test_smoke.py  test_stems.py  test_subtitle.py
