[project]
name = "video2yt"
version = "0.1.0"
description = "Download a Bilibili video and burn danmaku into the output MP4"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "bilibili-api-python>=17.4.1",
    "demucs>=4.0.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.73.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "soundfile>=0.13.1",
    "whisperx>=3.8.5",
    "yt-dlp>=2025.1.1",
    "yt-dlp-danmaku>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
subtitle = [
    "rapidocr-onnxruntime>=1.4",
]

[project.scripts]
video2yt = "video2yt.cli:main"
video2yt-compose = "video2yt.compose_cli:main"
video2yt-fetch = "video2yt.fetch_cli:main"
video2yt-image = "video2yt.image_gen_cli:main"
video2yt-merge = "video2yt.merge_cli:main"
video2yt-music-swap = "video2yt.music_swap_cli:main"
video2yt-research-card = "video2yt.research_card_cli:main"
video2yt-stems = "video2yt.stems_cli:main"
video2yt-subtitle = "video2yt.subtitle_cli:main"
video2yt-thumbnail = "video2yt.thumbnail_cli:main"
video2yt-topic = "video2yt.topic_cli:main"
video2yt-transcribe = "video2yt.transcribe_cli:main"
video2yt-tts = "video2yt.tts_cli:main"
video2yt-upload = "video2yt.upload_cli:main"
# Step6-restructure plan re-adds these in their own tasks when the backing
# modules land (so every commit leaves the repo in a runnable state):
#   video2yt-music-mix → plan T5
#   video2yt-burn      → plan T6

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video2yt"]

[tool.hatch.build.targets.wheel.force-include]
"src/video2yt/data/bg_glossary.yaml" = "video2yt/data/bg_glossary.yaml"
"src/video2yt/data/music_library.json" = "video2yt/data/music_library.json"
